# vForge-ai

./: .env.example  CONTRIBUTING.md  README.md  pyproject.toml
.github/prompts/: vForge-frmework.prompt.md
docker/: Dockerfile
docs/: api-reference.md  architecture.md  configuration-reference.md  deployment.md  developer-guide.md  extending.md  getting-started.md  index.md
examples/assistant/: README.md  application.yaml
examples/assistant/prompts/: assistant.md  researcher.md
examples/assistant/skills/house-style/: SKILL.md
src/vforge/: __init__.py
src/vforge/agents/: __init__.py  agent.py  factory.py
src/vforge/auth/: __init__.py  middleware.py
src/vforge/cli/: __init__.py  main.py
src/vforge/config/: __init__.py  loader.py  models.py
src/vforge/mcp/: __init__.py  client.py  manager.py
src/vforge/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/vforge/orchestration/: __init__.py  router.py
src/vforge/providers/: __init__.py
src/vforge/providers/llm/: base.py  (+3 more)
src/vforge/rag/: __init__.py  engine.py
src/vforge/runtime/: __init__.py  app.py  context.py
src/vforge/skills/: __init__.py  loader.py
src/vforge/transport/: __init__.py  a2a.py
src/vforge/utils/: __init__.py  env.py
src/vforge/web/: __init__.py  console.html
tests/: conftest.py  test_agent.py  test_config.py  test_memory.py  test_orchestration.py  test_rag.py  test_skills.py  test_tracing.py  test_transport.py  test_ui_and_skills_api.py
webui/angular/: README.md  angular.json  package.json  proxy.conf.json
webui/angular/src/: index.html  styles.css
(+7 files in other folders)
