[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vforge"
version = "0.1.0"
description = "VForge — a configuration-driven framework for building AI agents (Spring Boot for AI Agents)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "VForge Contributors" }]
keywords = ["ai", "agents", "llm", "mcp", "a2a", "framework"]
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.40",
]

[project.optional-dependencies]
rag = ["chromadb>=0.5"]
otel = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
vforge = "vforge.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
